# python_automation

./: conftest.py  pyproject.toml  requirements.txt
