[tool.poetry]
name = "runner"
version = "0.1.0"
description = ""
authors = ["Wilson Skariah <wskariah@jornaya.com>"]

[tool.poetry.dependencies]
python = "^3.7"
flask = "^1.1"
pytest = "^5.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
