[tool.poetry]
name = "runner"
version = "0.1.0"
description = ""
authors = ["Wilson Skariah <wskariah@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
flask = "^2.2"
tesults = "^1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
